add check_parameters function

--- a/questions/pl-graph-animate-examples/README-Example1-DFS/question.html
+++ b/questions/pl-graph-animate-examples/README-Example1-DFS/question.html
@@ -6,7 +6,7 @@
 <pl-graph-animate 
     params-type="adjacency-matrix" 
     params-name="matrix" 
-    frame-duration="2" 
+    frame-duration=2
     algorithm="dfs" 
     show-steps="True" 
     directed-graph="True" 
